Build 2.0.1412 - Localization support (now for only English and Italian), Fixed 15584, ILayoutUpdateStrategy now called for documents too. Fixed an issue which caused a layout strange behavior.
git-svn-id: https://avalondock.svn.codeplex.com/svn/Version2.0@95574 4ef1bfeb-0a34-4d02-9305-240e5b07a168

--- a/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
+++ b/AvalonDock/AvalonDock.MVVMTestApp/MainWindow.xaml
@@ -33,6 +33,8 @@
             <MenuItem Header="Layout">
                 <MenuItem Header="Load" Command="{Binding LoadLayoutCommand, ElementName=mainWindow}"/>
                 <MenuItem Header="Save" Command="{Binding SaveLayoutCommand, ElementName=mainWindow}"/>
+                <MenuItem Header="Dump to Console" Click="OnDumpToConsole"/>
+                
             </MenuItem>
         </Menu><!--AnchorablesSource="{Binding Tools}" DocumentsSource="{Binding Files}"-->
         <avalonDock:DockingManager x:Name="dockManager" 
